Zoomanager/force-app/main/default/objects/Animal__c/Animal__c.object-meta.xml
<CustomObject>
    <label>Animal</label>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>