Zoomanager/force-app/main/default/objects/Animal__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Pais</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Animales</relationshipLabel>
    <relationshipName>Animales</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>