Zoomanager/force-app/main/default/objects/Animal__c/fields/Raza__c.field-meta.xml
<CustomField>
    <fullName>Raza__c</fullName>
    <label>Raza</label>
    <referenceTo>Raza__c</referenceTo>
    <relationshipLabel>Animales</relationshipLabel>
    <relationshipName>Animales</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>