Zoomanager/force-app/main/default/objects/Animal__c/fields/Zona_Zoo__c.field-meta.xml
<CustomField>
    <fullName>Zona_Zoo__c</fullName>
    <label>Zona Zoo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ártico</fullName>
            </value>
            <value>
                <fullName>Bosque</fullName>
            </value>
            <value>
                <fullName>Cordillera de los Andes</fullName>
            </value>
            <value>
                <fullName>Desierto</fullName>
            </value>
            <value>
                <fullName>Montaña</fullName>
            </value>
            <value>
                <fullName>Océano</fullName>
            </value>
            <value>
                <fullName>Pradera africana</fullName>
            </value>
            <value>
                <fullName>Sabana africana</fullName>
            </value>
            <value>
                <fullName>Selva tropical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>