Zoomanager/force-app/main/default/objects/Animal__c/listViews/Animales_de_Europa.listView-meta.xml
<ListView>
    <fullName>Animales_de_Europa</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pais__c</field>
        <operation>contains</operation>
        <value>Europa</value>
    </filters>
    <label>Animales de Europa</label>
</ListView>